Ajouter lien vers la page candidat

--- a/templates/company-dashboard.html
+++ b/templates/company-dashboard.html
@@ -848,7 +848,7 @@
             </div>
             
             <!-- 3. Candidats -->
-            <div class="menu-item fade-in delay-3">
+            <div class="menu-item fade-in delay-3" onclick="window.location.href='candidate-page.html'">
                 <div class="notification-badge">12 nouveaux</div>
                 <div class="menu-icon">
                     <i class="fas fa-user-friends"></i>
