Update dashboard with mes-selections link

--- a/templates/company-dashboard.html
+++ b/templates/company-dashboard.html
@@ -838,7 +838,7 @@
             </div>
             
             <!-- 2. Mes sélections -->
-            <div class="menu-item fade-in delay-2">
+            <div class="menu-item fade-in delay-2" onclick="window.location.href='mes-selections.html'">
                 <div class="notification-badge">5 nouveaux</div>
                 <div class="menu-icon">
                     <i class="fas fa-th-large"></i>
